Update VibeNode 2026-07-03 19:03
